--- a/mod_articles_head/css/mod-intro.css
+++ b/mod_articles_head/css/mod-intro.css
@@ -1,3 +1,13 @@
+/**
+ * @package        HEAD. Article Module
+ * @version        1.7.2
+ * 
+ * @author         Carsten Ruppert <webmaster@headmarketing.de>
+ * @link           https://www.headmarketing.de
+ * @copyright      Copyright © 2018 HEAD. MARKETING GmbH All Rights Reserved
+ * @license        http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL
+ */
+
 .mod-intro{} /* Ein Modul */
 
 .mod-intro .mod-intro-introtext{} /* Einleitungstext */
