--- a/mod_articles_head/forms/filter.xml
+++ b/mod_articles_head/forms/filter.xml
@@ -27,6 +27,21 @@
             <option value="">JNONE</option>
         </field>
 
+		<field 
+			name="filter_tag_default"
+			type="tag"
+			showon="filter_type:tag"
+			mode="ajax"
+			custom="deny"
+			published="1"
+			multiple="false"
+			default=""
+			label="MODARH_FIELD_FILTER_TAG_DEFAULT_LABEL"
+			description="MODARH_FIELD_FILTER_TAG_DEFAULT_DESC"
+		>
+			<option value="">JNONE</option>
+		</field>
+
 		<field
 			name="filter_field"
 			type="sql"
@@ -48,11 +63,13 @@
 		<field
 			name="filter_sorting"
 			type="list"
+			default="asc"
 			label="MODARH_FIELD_FILTER_SORTING_LABEL"
 			description="MODARH_FIELD_FILTER_SORTING_DESC"
 		>
 			<option value="asc">MODARH_FIELD_FILTER_SORTING_OPT_ASC</option>
 			<option value="desc">MODARH_FIELD_FILTER_SORTING_OPT_DESC</option>
+			<option value="order">MODARH_FIELD_FILTER_SORTING_OPT_ORDER</option>
 		</field>
 
 		<field
@@ -67,7 +84,29 @@
 			<option value="1">JYES</option>
 		</field>
 
-		 <field
+		<field
+			name="hide_option_all"
+			type="radio"
+			showon="multiple:0"
+			class="btn-group"
+			label="MODARH_FIELD_FILTER_HIDE_OPTION_ALL_LABEL"
+			description="MODARH_FIELD_FILTER_HIDE_OPTION_ALL_DESC"
+			default="0"
+		>
+			<option value="0">JNO</option>
+			<option value="1">JYES</option>
+		</field>
+
+		<field 
+			name="option_all_label"
+			type="text"
+			showon="multiple:0[AND]hide_option_all:0"
+			class="filter-lg"
+			label="MODARH_FIELD_FILTER_OPTION_ALL_LABEL_LABEL"
+			description="MODARH_FIELD_FILTER_OPTION_ALL_LABEL_DESC"
+		/>
+
+		<field
 			name="show_items_count"
 			type="radio"
 			class="btn-group"
@@ -93,6 +132,92 @@
 			default="default"
 		>
 		</field>
+
+		<!--
+			Die Anzahl der Handles ist für v2.1 geplant und verlangt einige Änderungen an den SQL Queries im Helper.
+
+			field
+			name="range_handles"
+			type="list"
+			showon="template:range"
+			default="2"
+			label="MODARH_FIELD_FILTER_RANGE_HANDLES_LABEL"
+			description="MODARH_FIELD_FILTER_RANGE_HANDLES_DESC"
+		>
+			<option value="1">1</option>
+			<option value="2">2</option>
+		</field-->
+
+		<field 
+			name="range_round_numbers"
+			showon="template:range"
+			type="radio"
+			class="btn-group"
+			default="0"
+			label="MODARH_FIELD_FILTER_RANGE_ROUND_NUMBERS_LABEL"
+			description="MODARH_FIELD_FILTER_RANGE_ROUND_NUMBERS_DESC"
+		>
+			<option value="0">JNO</option>
+			<option value="1">JYES</option>
+		</field>
+
+		<field 
+			name="show_number_formatting"
+			showon="template:range"
+			type="radio"
+			class="btn-group"
+			default="0"
+			label="MODARH_FIELD_FILTER_RANGE_SHOW_FORMAT_LABEL"
+			description="MODARH_FIELD_FILTER_RANGE_SHOW_FORMAT_DESC"
+		>
+			<option value="0">JHIDE</option>
+			<option value="1">JSHOW</option>
+		</field>
+
+		<field
+			name="range_decimals"
+			type="text"
+			showon="template:range[AND]show_number_formatting:1"
+			default="2"
+			label="MODARH_FIELD_FILTER_RANGE_FORMAT_DECIMALS_LABEL"
+			description="MODARH_FIELD_FILTER_RANGE_FORMAT_DECIMALS_DESC"
+		/>
+
+		<field
+			name="range_mark"
+			type="text"
+			showon="template:range[AND]show_number_formatting:1"
+			default=","
+			label="MODARH_FIELD_FILTER_RANGE_FORMAT_DECIMALMARK_LABEL"
+			description="MODARH_FIELD_FILTER_RANGE_FORMAT_DECIMALSMARK_DESC"
+		/>
+
+		<field
+			name="range_thousand"
+			type="text"
+			showon="template:range[AND]show_number_formatting:1"
+			default="."
+			label="MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERGROUPING_LABEL"
+			description="MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERGROUPING_DESC"
+		/>
+
+		<field
+			name="range_prefix"
+			type="text"
+			showon="template:range[AND]show_number_formatting:1"
+			default=""
+			label="MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERPREFIX_LABEL"
+			description="MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERPREFIX_DESC"
+		/>
+
+		<field
+			name="range_suffix"
+			type="text"
+			showon="template:range[AND]show_number_formatting:1"
+			default=""
+			label="MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERSUFFIX_LABEL"
+			description="MODARH_FIELD_FILTER_RANGE_FORMAT_NUMBERSUFFIX_DESC"
+		/>
 
 	</fieldset>
 </form>
